# auto-object-focus

./: README.md  pyproject.toml  run.bat
src/auto_focus/: __init__.py  cli.py  controller.py  webui.py
tests/: conftest.py  test_controller.py
